# NewRender

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: FetchSlang.cmake  openssf.cmake
src/: main.cpp
src/application/: CMakeLists.txt  game.cpp  game.hpp  window.cpp  window.hpp
src/renderer/: CMakeLists.txt  buffer.cpp  buffer.hpp  compute.cpp  compute.hpp  device.cpp  device.hpp  executor.cpp  executor.hpp  graphics.cpp  graphics.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  validation.cpp  validation.hpp
src/renderer/buffers/: buffer.cpp  buffer.hpp  deviceBuffer.cpp  deviceBuffer.hpp  hostBuffer.cpp  hostBuffer.hpp
src/shaders/: CMakeLists.txt  frag.slang  graphics.slang  hello-world.slang  vert.slang
